<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anhDaiDien"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"/>
        <TextView
            android:id="@+id/tv_sdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdt"/>
        <TextView
            android:id="@+id/tv_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten"/>
        <Button
            android:id="@+id/bt_sua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#28B1C3"
            android:text="@string/sua" />
        <Button
            android:id="@+id/bt_xoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3887C6"
            android:text="@string/xoa"/>

    </LinearLayout>
</LinearLayout>